ide/scave: be statisfied with a lower Java version